# hatch-pinned-extra

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yaml  test.yaml
fixtures/lockfiles/extras/: pylock.pip.toml  pylock.uv.toml
fixtures/lockfiles/project/: pylock.pip.toml  pylock.uv.toml  pyproject.toml
fixtures/lockfiles/requests/: pylock.pip.toml  pylock.uv.toml  pyproject.toml
fixtures/uv_lock/extras/: pylock.pip.toml  pylock.uv.toml
fixtures/uv_lock/project/: pylock.pip.toml  pylock.uv.toml
src/hatch_pinned_extra/: __init__.py  _base.py  _compat.py  _plugin.py  _pylock.py  _uv.py
tests/: test_base.py  test_pylock.py  test_snapshots.py  test_uv_lock.py
tests/__snapshots__/: test_snapshots.ambr
